add projects swagger
